--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
+    "log-to-file": "^3.0.3",
     "mongoose": "^6.8.4",
     "nodemon": "^2.0.20",
+    "npm": "^9.4.0",
     "prettier": "^2.8.3"
   }
 }
