--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.8.4",
     "nodemon": "^2.0.20",
     "npm": "^9.4.0",
+    "passport-jwt": "^4.0.1",
     "prettier": "^2.8.3"
   }
 }
